# renewable-energy-pipeline

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: co2_avoided.sql
dbt/models/bronze/: sources.yml
dbt/models/gold/: gld_co2_savings_by_country.sql  gld_country_renewable_ranking.sql  gld_monthly_production_summary.sql  schema.yml
dbt/models/marts/: mart_co2_savings_by_country.sql  mart_country_renewable_ranking.sql  mart_monthly_capacity_summary.sql  mart_monthly_carbon_intensity_summary.sql  mart_monthly_demand_summary.sql  mart_monthly_emissions_summary.sql  mart_monthly_production_summary.sql  schema.yml
dbt/models/silver/: schema.yml  slv_daily_production.sql  slv_daily_renewable_share.sql
dbt/models/staging/: schema.yml  sources.yml  stg_monthly_capacity.sql  stg_monthly_carbon_intensity.sql  stg_monthly_demand.sql  stg_monthly_emissions.sql  (+2 more)
dbt/seeds/: countries.csv  emission_factors.csv  energy_sources.csv
dbt/tests/: assert_positive_production.sql
ggsql/: explore.ggsql
kestra/flows/: daily-ingestion.yml  historical-backfill.yml
soda/: checks_gold.yml  checks_raw.yml  checks_silver.yml  configuration.yml  ds_config.yml
soda/contracts/: mart_co2_savings_by_country.yml  mart_country_renewable_ranking.yml  mart_monthly_capacity_summary.yml  mart_monthly_carbon_intensity_summary.yml  mart_monthly_demand_summary.yml  mart_monthly_emissions_summary.yml  mart_monthly_production_summary.yml  raw_monthly_capacity.yml  raw_monthly_carbon_intensity.yml  raw_monthly_demand.yml  raw_monthly_emissions.yml  raw_monthly_generation.yml  stg_monthly_capacity.yml  stg_monthly_carbon_intensity.yml  stg_monthly_demand.yml  stg_monthly_emissions.yml  stg_monthly_generation.yml  stg_monthly_renewable_share.yml
sql/: schema.sql
src/renewable_energy_pipeline/: config.py  pipeline.py
src/renewable_energy_tracker/: __init__.py  config.py  pipeline.py
tests/: conftest.py  test_app.py  test_config.py  test_load.py  test_models.py  test_pipeline.py  test_query.py
tests/integration/: test_pipeline.py
(+13 files in other folders)
