[project]
name = "renewable-energy-tracker"
version = "0.1.0"
description = "Renewable energy production tracker using Ember Climate data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pandera>=0.22",
    "shiny>=1.2",
    "great-tables>=0.16",
    "duckdb>=1.0",
    "dlt[duckdb]>=1.0",
    "dbt-duckdb>=1.8",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.34",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "soda-duckdb>=4.3",
]

[build-system]
requires = ["uv-build>=0.2,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
replace-imports-with-any = [
    "dlt.**",
    "shiny.**",
    "duckdb.**",
    "pandera.**",
]

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
